ADD_EXECUTABLE(ascii-paint
	apf_file.cpp
    app.cpp
    app_data.cpp
    app_gui.cpp
    app_user.cpp
    asc_file.cpp
    base64.cpp
    cell_operation.cpp
    color_box.cpp
    colour_widget.cpp
    copy_operation.cpp    
    export_operation.cpp
    fill_operation.cpp
    fov_operation.cpp
    get_string_message_box.cpp
    import_operation.cpp
    layer_widget.cpp
    lbutton.cpp
    line_operation.cpp
    lradio_button.cpp
    main.cpp
    message_box.cpp
    misc.cpp
    new_operation.cpp
    open_operation.cpp
    operation.cpp
    oval_operation.cpp
    paste_operation.cpp
    path_operation.cpp
    pick_operation.cpp
    quit_operation.cpp
    rect_operation.cpp
    redo_operation.cpp
    resize_operation.cpp
    save_operation.cpp
    slider2.cpp
    small_button.cpp
    small_toolbar.cpp
    symbols_widget.cpp
    text_operation.cpp
    undo_operation.cpp
)

target_link_libraries(ascii-paint tcod-mingw tcod-gui-mingw gd)
INSTALL(TARGETS ascii-paint DESTINATION .)
